--- a/assignment13.ipynb
+++ b/assignment13.ipynb
@@ -18,13 +18,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "0ddb641e-0631-4834-ab73-22505fd2631a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "── \u001b[1mAttaching packages\u001b[22m ────────────────────────────────────── tidymodels 1.2.0 ──\n",
+      "\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mbroom       \u001b[39m 1.0.5      \u001b[32m✔\u001b[39m \u001b[34mrecipes     \u001b[39m 1.0.10\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mdials       \u001b[39m 1.2.1      \u001b[32m✔\u001b[39m \u001b[34mrsample     \u001b[39m 1.2.1 \n",
+      "\u001b[32m✔\u001b[39m \u001b[34mdplyr       \u001b[39m 1.1.4      \u001b[32m✔\u001b[39m \u001b[34mtibble      \u001b[39m 3.2.1 \n",
+      "\u001b[32m✔\u001b[39m \u001b[34mggplot2     \u001b[39m 3.5.0      \u001b[32m✔\u001b[39m \u001b[34mtidyr       \u001b[39m 1.3.1 \n",
+      "\u001b[32m✔\u001b[39m \u001b[34minfer       \u001b[39m 1.0.7      \u001b[32m✔\u001b[39m \u001b[34mtune        \u001b[39m 1.2.0 \n",
+      "\u001b[32m✔\u001b[39m \u001b[34mmodeldata   \u001b[39m 1.3.0      \u001b[32m✔\u001b[39m \u001b[34mworkflows   \u001b[39m 1.1.4 \n",
+      "\u001b[32m✔\u001b[39m \u001b[34mparsnip     \u001b[39m 1.2.1      \u001b[32m✔\u001b[39m \u001b[34mworkflowsets\u001b[39m 1.1.0 \n",
+      "\u001b[32m✔\u001b[39m \u001b[34mpurrr       \u001b[39m 1.0.2      \u001b[32m✔\u001b[39m \u001b[34myardstick   \u001b[39m 1.3.1 \n",
+      "\n",
+      "── \u001b[1mConflicts\u001b[22m ───────────────────────────────────────── tidymodels_conflicts() ──\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mpurrr\u001b[39m::\u001b[32mdiscard()\u001b[39m masks \u001b[34mscales\u001b[39m::discard()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m  masks \u001b[34mstats\u001b[39m::filter()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m     masks \u001b[34mstats\u001b[39m::lag()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mrecipes\u001b[39m::\u001b[32mstep()\u001b[39m  masks \u001b[34mstats\u001b[39m::step()\n",
+      "\u001b[34m•\u001b[39m Use suppressPackageStartupMessages() to eliminate package startup messages\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
-    "\n"
+    "library(ISLR2)\n",
+    "library(tidymodels)"
    ]
   },
   {
@@ -41,10 +66,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "0b0c3ba0-d37c-42bc-a46d-cbc614d72484",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A data.frame: 6 × 4</caption>\n",
+       "<thead>\n",
+       "\t<tr><th></th><th scope=col>default</th><th scope=col>student</th><th scope=col>balance</th><th scope=col>income</th></tr>\n",
+       "\t<tr><th></th><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><th scope=row>1</th><td>No</td><td>No </td><td> 729.5265</td><td>44361.625</td></tr>\n",
+       "\t<tr><th scope=row>2</th><td>No</td><td>Yes</td><td> 817.1804</td><td>12106.135</td></tr>\n",
+       "\t<tr><th scope=row>3</th><td>No</td><td>No </td><td>1073.5492</td><td>31767.139</td></tr>\n",
+       "\t<tr><th scope=row>4</th><td>No</td><td>No </td><td> 529.2506</td><td>35704.494</td></tr>\n",
+       "\t<tr><th scope=row>5</th><td>No</td><td>No </td><td> 785.6559</td><td>38463.496</td></tr>\n",
+       "\t<tr><th scope=row>6</th><td>No</td><td>Yes</td><td> 919.5885</td><td> 7491.559</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A data.frame: 6 × 4\n",
+       "\\begin{tabular}{r|llll}\n",
+       "  & default & student & balance & income\\\\\n",
+       "  & <fct> & <fct> & <dbl> & <dbl>\\\\\n",
+       "\\hline\n",
+       "\t1 & No & No  &  729.5265 & 44361.625\\\\\n",
+       "\t2 & No & Yes &  817.1804 & 12106.135\\\\\n",
+       "\t3 & No & No  & 1073.5492 & 31767.139\\\\\n",
+       "\t4 & No & No  &  529.2506 & 35704.494\\\\\n",
+       "\t5 & No & No  &  785.6559 & 38463.496\\\\\n",
+       "\t6 & No & Yes &  919.5885 &  7491.559\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A data.frame: 6 × 4\n",
+       "\n",
+       "| <!--/--> | default &lt;fct&gt; | student &lt;fct&gt; | balance &lt;dbl&gt; | income &lt;dbl&gt; |\n",
+       "|---|---|---|---|---|\n",
+       "| 1 | No | No  |  729.5265 | 44361.625 |\n",
+       "| 2 | No | Yes |  817.1804 | 12106.135 |\n",
+       "| 3 | No | No  | 1073.5492 | 31767.139 |\n",
+       "| 4 | No | No  |  529.2506 | 35704.494 |\n",
+       "| 5 | No | No  |  785.6559 | 38463.496 |\n",
+       "| 6 | No | Yes |  919.5885 |  7491.559 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  default student balance   income   \n",
+       "1 No      No       729.5265 44361.625\n",
+       "2 No      Yes      817.1804 12106.135\n",
+       "3 No      No      1073.5492 31767.139\n",
+       "4 No      No       529.2506 35704.494\n",
+       "5 No      No       785.6559 38463.496\n",
+       "6 No      Yes      919.5885  7491.559"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "Default |> head()"
    ]
@@ -61,10 +147,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "45716b9b-22d9-4731-b8fe-c4f1fdb5e66f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A data.frame: 2 × 2</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>default</th><th scope=col>n</th></tr>\n",
+       "\t<tr><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;int&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>No </td><td>9667</td></tr>\n",
+       "\t<tr><td>Yes</td><td> 333</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A data.frame: 2 × 2\n",
+       "\\begin{tabular}{ll}\n",
+       " default & n\\\\\n",
+       " <fct> & <int>\\\\\n",
+       "\\hline\n",
+       "\t No  & 9667\\\\\n",
+       "\t Yes &  333\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A data.frame: 2 × 2\n",
+       "\n",
+       "| default &lt;fct&gt; | n &lt;int&gt; |\n",
+       "|---|---|\n",
+       "| No  | 9667 |\n",
+       "| Yes |  333 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  default n   \n",
+       "1 No      9667\n",
+       "2 Yes      333"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "Default |> count(default)"
    ]
@@ -87,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "1d725ca5-77de-4025-8ce5-f8e0fef30992",
    "metadata": {},
    "outputs": [],
@@ -108,13 +239,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "b46b8b34-9849-4db2-91a3-027869b944a9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n"
+    "mod <- logistic_reg(mode = \"classification\", engine = \"glm\")"
    ]
   },
   {
@@ -127,10 +257,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "2131ba72-af1e-46ac-b62e-fa694d36b7aa",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A tibble: 1 × 3</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>.metric</th><th scope=col>.estimator</th><th scope=col>.estimate</th></tr>\n",
+       "\t<tr><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>accuracy</td><td>binary</td><td>0.9666667</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A tibble: 1 × 3\n",
+       "\\begin{tabular}{lll}\n",
+       " .metric & .estimator & .estimate\\\\\n",
+       " <chr> & <chr> & <dbl>\\\\\n",
+       "\\hline\n",
+       "\t accuracy & binary & 0.9666667\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A tibble: 1 × 3\n",
+       "\n",
+       "| .metric &lt;chr&gt; | .estimator &lt;chr&gt; | .estimate &lt;dbl&gt; |\n",
+       "|---|---|---|\n",
+       "| accuracy | binary | 0.9666667 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  .metric  .estimator .estimate\n",
+       "1 accuracy binary     0.9666667"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# This code calculates the accuracy of a model that always predicts default to be \"No\"\n",
     "\n",
@@ -159,13 +330,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "2a53ed42-03d9-4840-a702-d8f44f74e773",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "\n",
-    "\n"
+    "folds = vfold_cv(Default_train,v=10,strata=\"default\")"
    ]
   },
   {
@@ -178,10 +350,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "4b743466-c50b-491c-b476-0553cafa043d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A tibble: 3 × 6</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>.metric</th><th scope=col>.estimator</th><th scope=col>mean</th><th scope=col>n</th><th scope=col>std_err</th><th scope=col>.config</th></tr>\n",
+       "\t<tr><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;chr&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>accuracy   </td><td>binary</td><td>0.97377778</td><td>10</td><td>0.001528872</td><td>Preprocessor1_Model1</td></tr>\n",
+       "\t<tr><td>brier_class</td><td>binary</td><td>0.02127411</td><td>10</td><td>0.001085915</td><td>Preprocessor1_Model1</td></tr>\n",
+       "\t<tr><td>roc_auc    </td><td>binary</td><td>0.94947684</td><td>10</td><td>0.004323620</td><td>Preprocessor1_Model1</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A tibble: 3 × 6\n",
+       "\\begin{tabular}{llllll}\n",
+       " .metric & .estimator & mean & n & std\\_err & .config\\\\\n",
+       " <chr> & <chr> & <dbl> & <int> & <dbl> & <chr>\\\\\n",
+       "\\hline\n",
+       "\t accuracy    & binary & 0.97377778 & 10 & 0.001528872 & Preprocessor1\\_Model1\\\\\n",
+       "\t brier\\_class & binary & 0.02127411 & 10 & 0.001085915 & Preprocessor1\\_Model1\\\\\n",
+       "\t roc\\_auc     & binary & 0.94947684 & 10 & 0.004323620 & Preprocessor1\\_Model1\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A tibble: 3 × 6\n",
+       "\n",
+       "| .metric &lt;chr&gt; | .estimator &lt;chr&gt; | mean &lt;dbl&gt; | n &lt;int&gt; | std_err &lt;dbl&gt; | .config &lt;chr&gt; |\n",
+       "|---|---|---|---|---|---|\n",
+       "| accuracy    | binary | 0.97377778 | 10 | 0.001528872 | Preprocessor1_Model1 |\n",
+       "| brier_class | binary | 0.02127411 | 10 | 0.001085915 | Preprocessor1_Model1 |\n",
+       "| roc_auc     | binary | 0.94947684 | 10 | 0.004323620 | Preprocessor1_Model1 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  .metric     .estimator mean       n  std_err     .config             \n",
+       "1 accuracy    binary     0.97377778 10 0.001528872 Preprocessor1_Model1\n",
+       "2 brier_class binary     0.02127411 10 0.001085915 Preprocessor1_Model1\n",
+       "3 roc_auc     binary     0.94947684 10 0.004323620 Preprocessor1_Model1"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "mod |> \n",
     "    fit_resamples(default ~ income + balance, folds) |>\n",
@@ -197,14 +418,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "99134b8d-eee8-4f47-898a-f0ccb24ae05e",
+   "cell_type": "markdown",
+   "id": "5d5ff69a-3bbc-4909-9c5f-dba89396bd41",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "\n",
-    "\n"
+    "This model is more accurate than the naive model. "
    ]
   },
   {
@@ -220,13 +438,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "1c1db5b5-445e-4912-aeaa-5073ea17003f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "rec = # COMPLETE THE RECIPE\n",
-    "\n",
+    "rec = recipe(default ~ income + balance + student, data = Default_train) |>\n",
+    "    step_dummy(student)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "efb8b544-4d07-4bea-9b24-8cadc86ace41",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A tibble: 3 × 6</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>.metric</th><th scope=col>.estimator</th><th scope=col>mean</th><th scope=col>n</th><th scope=col>std_err</th><th scope=col>.config</th></tr>\n",
+       "\t<tr><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;chr&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>accuracy   </td><td>binary</td><td>0.97366667</td><td>10</td><td>0.001554232</td><td>Preprocessor1_Model1</td></tr>\n",
+       "\t<tr><td>brier_class</td><td>binary</td><td>0.02110269</td><td>10</td><td>0.001022833</td><td>Preprocessor1_Model1</td></tr>\n",
+       "\t<tr><td>roc_auc    </td><td>binary</td><td>0.95018553</td><td>10</td><td>0.003909553</td><td>Preprocessor1_Model1</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A tibble: 3 × 6\n",
+       "\\begin{tabular}{llllll}\n",
+       " .metric & .estimator & mean & n & std\\_err & .config\\\\\n",
+       " <chr> & <chr> & <dbl> & <int> & <dbl> & <chr>\\\\\n",
+       "\\hline\n",
+       "\t accuracy    & binary & 0.97366667 & 10 & 0.001554232 & Preprocessor1\\_Model1\\\\\n",
+       "\t brier\\_class & binary & 0.02110269 & 10 & 0.001022833 & Preprocessor1\\_Model1\\\\\n",
+       "\t roc\\_auc     & binary & 0.95018553 & 10 & 0.003909553 & Preprocessor1\\_Model1\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A tibble: 3 × 6\n",
+       "\n",
+       "| .metric &lt;chr&gt; | .estimator &lt;chr&gt; | mean &lt;dbl&gt; | n &lt;int&gt; | std_err &lt;dbl&gt; | .config &lt;chr&gt; |\n",
+       "|---|---|---|---|---|---|\n",
+       "| accuracy    | binary | 0.97366667 | 10 | 0.001554232 | Preprocessor1_Model1 |\n",
+       "| brier_class | binary | 0.02110269 | 10 | 0.001022833 | Preprocessor1_Model1 |\n",
+       "| roc_auc     | binary | 0.95018553 | 10 | 0.003909553 | Preprocessor1_Model1 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  .metric     .estimator mean       n  std_err     .config             \n",
+       "1 accuracy    binary     0.97366667 10 0.001554232 Preprocessor1_Model1\n",
+       "2 brier_class binary     0.02110269 10 0.001022833 Preprocessor1_Model1\n",
+       "3 roc_auc     binary     0.95018553 10 0.003909553 Preprocessor1_Model1"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
     "mod |>\n",
     "    fit_resamples(rec, folds) |>\n",
     "    collect_metrics()"
@@ -241,14 +517,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c32541be-f434-4517-bcd6-d125c5c3318d",
+   "cell_type": "markdown",
+   "id": "54d26fff-3b4b-4992-b1c9-8274521eb498",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "\n",
-    "\n"
+    "The performance of the model that includes `student` as a predictor appears nearly identical to the first model."
    ]
   },
   {
@@ -262,14 +535,74 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "309dae3d-46b2-4437-804d-5fdd099a269c",
+   "metadata": {},
+   "source": [
+    "Yes, the new model outperforms the naive model (see below)."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "12a41099-6a0e-4858-8cd2-fea3f1d2398d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A tibble: 3 × 6</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>.metric</th><th scope=col>.estimator</th><th scope=col>mean</th><th scope=col>n</th><th scope=col>std_err</th><th scope=col>.config</th></tr>\n",
+       "\t<tr><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;chr&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>accuracy   </td><td>binary</td><td>0.97377778</td><td>10</td><td>0.001528872</td><td>Preprocessor1_Model1</td></tr>\n",
+       "\t<tr><td>brier_class</td><td>binary</td><td>0.02127411</td><td>10</td><td>0.001085915</td><td>Preprocessor1_Model1</td></tr>\n",
+       "\t<tr><td>roc_auc    </td><td>binary</td><td>0.94947684</td><td>10</td><td>0.004323620</td><td>Preprocessor1_Model1</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A tibble: 3 × 6\n",
+       "\\begin{tabular}{llllll}\n",
+       " .metric & .estimator & mean & n & std\\_err & .config\\\\\n",
+       " <chr> & <chr> & <dbl> & <int> & <dbl> & <chr>\\\\\n",
+       "\\hline\n",
+       "\t accuracy    & binary & 0.97377778 & 10 & 0.001528872 & Preprocessor1\\_Model1\\\\\n",
+       "\t brier\\_class & binary & 0.02127411 & 10 & 0.001085915 & Preprocessor1\\_Model1\\\\\n",
+       "\t roc\\_auc     & binary & 0.94947684 & 10 & 0.004323620 & Preprocessor1\\_Model1\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A tibble: 3 × 6\n",
+       "\n",
+       "| .metric &lt;chr&gt; | .estimator &lt;chr&gt; | mean &lt;dbl&gt; | n &lt;int&gt; | std_err &lt;dbl&gt; | .config &lt;chr&gt; |\n",
+       "|---|---|---|---|---|---|\n",
+       "| accuracy    | binary | 0.97377778 | 10 | 0.001528872 | Preprocessor1_Model1 |\n",
+       "| brier_class | binary | 0.02127411 | 10 | 0.001085915 | Preprocessor1_Model1 |\n",
+       "| roc_auc     | binary | 0.94947684 | 10 | 0.004323620 | Preprocessor1_Model1 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  .metric     .estimator mean       n  std_err     .config             \n",
+       "1 accuracy    binary     0.97377778 10 0.001528872 Preprocessor1_Model1\n",
+       "2 brier_class binary     0.02127411 10 0.001085915 Preprocessor1_Model1\n",
+       "3 roc_auc     binary     0.94947684 10 0.004323620 Preprocessor1_Model1"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
+    "rec = recipe(default ~ income + balance, data = Default_test)\n",
     "\n",
-    "\n"
+    "mod |>\n",
+    "    fit_resamples(rec, folds) |>\n",
+    "    collect_metrics()"
    ]
   },
   {
